--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-      <script src="./components/swiper.js"></script>
-      <script src="./utils/apiDetails.js"></script>
-      <script src="./components/headerCard.js"></script>
-      <script src="./utils/script.js"></script>
-      <script src="./scriptHeader.js"></script>
     </div>
+    <div class="sub-container">
+      <h3>Popular Movies</h3>
+      <ul class="movie-list"></ul>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./components/swiper.js"></script>
+    <script src="./utils/apiDetails.js"></script>
+    <script src="./components/headerCard.js"></script>
+    <script src="./components/movieCard.js"></script>
+    <script src="./utils/script.js"></script>
+    <script src="./scriptHeader.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
