feature/input-tv_show option

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </form>
     <div class="sub-container">
-      <h3>Popular Movies</h3>
+      <h3 id="list-title">Popular Movies</h3>
       <ul class="movie-list"></ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -70,7 +70,6 @@
     <script src="./components/movieCard.js"></script>
     <script src="./components/inputSearch.js"></script>
     <script src="./utils/script.js"></script>
-    <script src="./scriptHeader.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
