feature/fetching selected card

--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@
     </form>
     <div class="sub-container">
       <h3 id="list-title">Popular Movies</h3>
-      <ul class="movie-list"></ul>
+      <ul class="main-list"></ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./components/swiper.js"></script>
     <script src="./utils/apiDetails.js"></script>
     <script src="./utils/validation.js"></script>
     <script src="./components/headerCard.js"></script>
-    <script src="./components/movieCard.js"></script>
+    <script src="./components/mainCard.js"></script>
     <script src="./components/inputSearch.js"></script>
     <script src="./utils/script.js"></script>
+    <script src="./components/selectedCard.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
