--- a/details.html
+++ b/details.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h2 id="title"></h2>
+    <button id="btn-back">Back to movies</button>
     <div id="details-container" class="details-container">
       <div id="details-list" class="details-list"></div>
     </div>
@@ -17,7 +18,9 @@
     <script src="./utils/apiDetails.js"></script>
     <script src="./utils/validation.js"></script>
     <script src="./utils/script.js"></script>
+    <script src="./components/headerCard.js"></script>
     <script src="./components/mainCard.js"></script>
-    <script src="./components/detailsPage.js"></script>
+    <script src="./components/detailsCard.js"></script>
+    <script src="./detailsPage.js"></script>
   </body>
 </html>
