--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <script src="./components/swiper.js"></script>
     <script src="./utils/apiDetails.js"></script>
     <script src="./utils/validation.js"></script>
+    <script src="./utils/selectIds.js"></script>
     <script src="./components/headerCard.js"></script>
     <script src="./components/mainCard.js"></script>
     <script src="./components/inputSearch.js"></script>
     <script src="./utils/script.js"></script>
-    <script src="./components/selectedCard.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
