feature select options from header

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <body>
     <header class="header">
       <strong>FLIXX</strong>
-      <div class="header-div">
-        <span>Movies</span>
-        <span>TV Shows</span>
+      <div id="header-div" class="header-div">
+        <span id="movie">Movies</span>
+        <span id="tv">TV Shows</span>
       </div>
     </header>
     <div class="container">
