--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="stylesheet" href="resetStyles.css" />
     <link rel="stylesheet" href="searchStyles.css" />
     <link rel="stylesheet" href="styles.css" />
@@ -62,6 +66,16 @@
       <h3 id="list-title">Popular Movies</h3>
       <ul class="main-list"></ul>
     </div>
+    <footer class="footer">
+      <strong>FLIXX</strong>
+      <span>JCostadev23</span>
+      <div>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-linkedin"></i>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./components/swiper.js"></script>
     <script src="./utils/apiDetails.js"></script>
