--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
       <h3 id="list-title">Popular Movies</h3>
       <ul class="main-list"></ul>
     </div>
+    <div class="pagination">
+      <button id="prevPage" class="btn-pagination">
+        <i class="fas fa-chevron-left"></i>
+        Back
+      </button>
+      <button id="nextPage" class="btn-pagination">
+        Next
+        <i class="fas fa-chevron-right"></i>
+      </button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./components/swiper.js"></script>
     <script src="./utils/apiDetails.js"></script>
@@ -70,6 +80,7 @@
     <script src="./components/headerCard.js"></script>
     <script src="./components/mainCard.js"></script>
     <script src="./components/inputSearch.js"></script>
+    <script src="./components/pagination.js"></script>
     <script src="./utils/script.js"></script>
     <script src="main.js"></script>
   </body>
