--- a/movie_details.html
+++ b/movie_details.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Details</title>
     <link rel="stylesheet" href="resetStyles.css" />
     <link rel="stylesheet" href="details.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="container"></div>
     <h2 id="title"></h2>
     <button id="btn-back">Back to movies</button>
     <div id="details-container" class="details-container">
@@ -16,11 +16,12 @@
     </div>
 
     <script src="./utils/apiDetails.js"></script>
-    <script src="./utils/validation.js"></script>
     <script src="./utils/script.js"></script>
+    <script src="./utils/validation.js"></script>
     <script src="./components/headerCard.js"></script>
     <script src="./components/mainCard.js"></script>
     <script src="./components/detailsCard.js"></script>
     <script src="./detailsPage.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
