--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <strong>FLIXX</strong>
+      <a class="nav-link" href="/">FLIXX</a>
       <nav id="header-div" class="header-div">
         <ul>
           <li>
@@ -106,8 +106,6 @@
     <script src="./utils/selectIds.js"></script>
     <script src="./components/headerCard.js"></script>
     <script src="./components/mainCard.js"></script>
-    <script src="./components/inputSearch.js"></script>
-    <script src="./components/pagination.js"></script>
     <script src="./utils/script.js"></script>
     <script src="main.js"></script>
   </body>
