--- a/movie_details.html
+++ b/movie_details.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <header class="header">
+      <a class="nav-link" href="/">FLIXX</a>
+      <nav id="header-div" class="header-div">
+        <ul>
+          <li>
+            <a class="nav-link" href="/index.html">Movies</a>
+          </li>
+          <li>
+            <a class="nav-link" href="/tv_shows.html">TV Shows</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <div id="container"></div>
     <h2 id="title"></h2>
     <button id="btn-back">Back to movies</button>
