--- a/search.html
+++ b/search.html
@@ -62,20 +62,11 @@
         </div>
       </form>
     </section>
-
+    <heading id="total-pages"></heading>
     <div class="sub-container">
       <ul class="main-list"></ul>
     </div>
-    <div class="pagination">
-      <button id="prevPage" class="btn-pagination">
-        <i class="fas fa-chevron-left"></i>
-        Back
-      </button>
-      <button id="nextPage" class="btn-pagination">
-        Next
-        <i class="fas fa-chevron-right"></i>
-      </button>
-    </div>
+    <div id="pagination" class="pagination"></div>
     <footer class="footer">
       <strong>FLIXX</strong>
       <span>JCostadev23</span>
@@ -90,6 +81,7 @@
     <script src="./utils/validation.js"></script>
     <script src="./components/mainCard.js"></script>
     <script src="./utils/script.js"></script>
+    <script src="./utils/selectIds.js"></script>
     <script src="main.js"></script>
     <div class="spinner"></div>
   </body>
