--- a/tv_shows.html
+++ b/tv_shows.html
@@ -65,16 +65,7 @@
       <h3 id="list-title">Popula Tv Shows</h3>
       <ul class="main-list"></ul>
     </div>
-    <div class="pagination">
-      <button id="prevPage" class="btn-pagination">
-        <i class="fas fa-chevron-left"></i>
-        Back
-      </button>
-      <button id="nextPage" class="btn-pagination">
-        Next
-        <i class="fas fa-chevron-right"></i>
-      </button>
-    </div>
+    <div class="pagination"></div>
     <footer class="footer">
       <strong>FLIXX</strong>
       <span>JCostadev23</span>
